--- a/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
+++ b/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
@@ -814,4 +814,10 @@
   <data name="MinWidth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TimerLab\minWidth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HighlightDifference" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HighlightText1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LiveCodingLab" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\livecodinglab.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
