--- a/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
+++ b/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
@@ -820,4 +820,22 @@
   <data name="LiveCodingLab" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\livecodinglab.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AnimateNewLines" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AnimateNewLines.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GroupCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GroupCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HighlightDifference1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HighlightDifference.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InsertCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InsertCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RefreshAllCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RefreshAllCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RefreshCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RefreshCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
