--- a/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
+++ b/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
@@ -844,4 +844,7 @@
   <data name="up_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\up_arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="InsertDiff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InsertDiff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
