--- a/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
+++ b/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
@@ -847,4 +847,7 @@
   <data name="InsertDiff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\InsertDiff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RefreshAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RefreshAnimation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
