--- a/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
+++ b/PowerPointLabs/PowerPointLabs/Properties/Resources.resx
@@ -829,9 +829,6 @@
   <data name="HighlightDifference1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HighlightDifference.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="InsertCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\InsertCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="RefreshAllCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RefreshAllCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -849,5 +846,14 @@
   </data>
   <data name="RefreshAnimation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RefreshAnimation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CreateHandouts" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CreateHandouts.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FileCodeBox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FileCodeBox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InsertCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InsertCode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
